Added function to close the key storage after x amount of seconds

--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Crypt Tomb | Key - value encrypted local storage</title>
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
+
 <body>
+    <noscript>This app doesn't work without javascript</noscript>
     <main id="app-main"></main>
     <script src="./assets/js/main.js"></script>
 </body>
+
 </html>
