Added routing module

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <noscript>This app doesn't work without javascript</noscript>
     <main id="app-main"></main>
-    <script src="./assets/js/main.js"></script>
+    <script type="module" src="./assets/js/main.js"></script>
 </body>
 
 </html>
