--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Crypt Tomb | Key - value encrypted local storage</title>
     <link rel="stylesheet" href="./assets/css/style.css">
+    <script type="module" src="./components/components.js"></script>
 </head>
 
 <body>
