--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Crypt Tomb | Key - value encrypted local storage</title>
     <link rel="stylesheet" href="./assets/css/style.css">
     <script type="module" src="./components/components.js"></script>
+    <script type="module" src="./pages/pages.js"></script>
 </head>
 
 <body>
